--- a/src/app/components/agregar-cuenta/agregar-cuenta.component.html
+++ b/src/app/components/agregar-cuenta/agregar-cuenta.component.html
@@ -1,3 +1,5 @@
 
 <app-menu></app-menu>
-<p>agregar-cuenta works!</p>
+<p class="text-white m-2 text-center">
+  Bruno Aguayo Ejemplo Frontend
+</p>
