--- a/src/app/components/agregar-coordenada/agregar-coordenada.component.html
+++ b/src/app/components/agregar-coordenada/agregar-coordenada.component.html
@@ -34,7 +34,7 @@
             La latitud es requerida
           </span>
           <span *ngIf="formRegistrar.controls.validaLatitud.hasError('min')">
-            La latitud es requerido
+            La latitud es requerida
           </span>
         </mat-hint>
       </mat-form-field>
@@ -85,7 +85,7 @@
         </mat-select>
         <mat-hint style="color: red;" *ngIf="formRegistrar.controls.validaProvincia.touched">
           <span *ngIf="formRegistrar.controls.validaProvincia.hasError('min')">
-            La provincia es requerido
+            La provincia es requerida
           </span>
         </mat-hint>
       </mat-form-field>
@@ -107,7 +107,7 @@
     </div>
     <div class="row" style="margin-top: 3%; margin-left: auto; margin-right: auto; max-width: fit-content;">
       <button mat-raised-button type="submit" color="primary" [disabled]="formRegistrar.invalid"
-        (click)="registrar()">Registra</button>
+        (click)="registrar()">Registrar</button>
     </div>
   </form>
 </div>
