PC2 Julio Avalos avances

--- a/src/app/components/crud-prestatario/crud-prestatario.component.html
+++ b/src/app/components/crud-prestatario/crud-prestatario.component.html
@@ -1,1 +1,92 @@
-<p>crud-prestatario works!</p>
+
+<app-menu></app-menu>
+<div class="container">
+  <div class="row">
+    <mat-toolbar color="primary">
+      <span>Crud Prestatario</span>
+    </mat-toolbar>
+  </div>
+  <div class="row" style="margin-top: 3%">
+    <mat-form-field class="col-md-4">
+      <mat-label>Login de Prestatario</mat-label>
+      <input matInput [(ngModel)]="filtro">
+    </mat-form-field>
+
+    <button (click)="refreshTable()" mat-raised-button type="button" color="primary"
+      style="width: 150px; margin-top: 10px;">Filtrar</button>
+    <button (click)="openDialogDeRegistrar()" mat-raised-button type="button" color="primary"
+      style="width: 150px; margin-left: 10px; margin-top: 10px;">Registrar</button>
+  </div>
+  <div class="row" style="margin-top: 3%">
+    <mat-table #table class="mat-cell" [dataSource]="dataSource">
+
+      <ng-container matColumnDef="idUsuario">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Código</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.idUsuario }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="nombres">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Nombres</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.nombres}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="apellidos">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Apellidos</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.apellidos}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="dni">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>DNI</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.dni}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="login">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Login</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.login}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="correo">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Correo</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.correo}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="fechaNacimiento">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Fecha de Nacimiento</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.fechaNacimiento}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="direccion">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Dirección</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.direccion}}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="estado">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.estado == 1 ? "Activo" : "Inactivo" }}</mat-cell>
+      </ng-container>
+
+      <ng-container matColumnDef="acciones">
+        <mat-header-cell mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+        <mat-cell *matCellDef="let aux">
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idUsuario}}" name="estado"
+              [checked]="aux.estado==1?true:false" (change)="updateDeEstado(aux)" />
+            <label class="custom-control-label" for="idEstado_{{ aux.idUsuario}}"></label>
+          </div>
+
+          <button mat-icon-button color="accent" (click)="openDialogDeActualizar(aux)">
+            <mat-icon aria-label="Edit">edit</mat-icon>
+          </button>
+
+          <button mat-icon-button color="warn" (click)="delete(aux)">
+            <mat-icon aria-label="Delete">delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[8,10,12]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
