--- a/src/app/components/crud-entidad-financiera/crud-entidad-financiera.component.html
+++ b/src/app/components/crud-entidad-financiera/crud-entidad-financiera.component.html
@@ -1,1 +1,71 @@
-<p>crud-entidad-financiera works-AGREGANDO RAMA PC2-Mamani</p>
+<app-menu></app-menu>
+<div class="container">
+  <div class="row">
+    <mat-toolbar color="primary">
+      <span>Entidad Financiera CRUD - MAMANI</span>
+    </mat-toolbar>
+  </div>
+  <div class="row" style="margin-top: 3%">
+    <mat-form-field class="col-md-4">
+      <mat-label>Tipo de Entidad</mat-label>
+      <mat-select [(ngModel)]="filter" (selectionChange)="filter">
+        <mat-option value="0">[Seleccione]</mat-option>
+        <mat-option *ngFor="let x of listaTipo" [value]="x.idDataCatalogo">
+          {{ x.descripcion }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <div class="button-group">
+      <button (click)="refrescarTabla()" type="button" class="btn btn-dark" >Filtrar</button>
+      <button (click)="openElRegistrar()"  type="button" class="btn btn-dark" style="margin-left: 1cm;">Registrar</button>
+    </div>
+  </div>
+  <div class="row" style="margin-top: 3%">
+    <mat-table #table class="" [dataSource]="dataSource">
+      <ng-container matColumnDef="idEntidadFinanciera">
+        <mat-header-cell *matHeaderCellDef>Codigo</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.idEntidadFinanciera }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="nombre">
+        <mat-header-cell *matHeaderCellDef>Nombre</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.nombre }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="gerente">
+        <mat-header-cell *matHeaderCellDef>Gerente</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.gerente }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="tipoEntidad">
+        <mat-header-cell *matHeaderCellDef>Tipo de Entidad</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.tipoEntidad.descripcion }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="ubigeo">
+        <mat-header-cell *matHeaderCellDef>Ubigeo</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.ubigeo.departamento }} - {{ aux.ubigeo.provincia }} - {{
+          aux.ubigeo.distrito }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="estado">
+        <mat-header-cell *matHeaderCellDef>Estado</mat-header-cell>
+        <mat-cell *matCellDef="let aux">{{ aux.estado == 1 ? "Activo" : "Inactivo" }}</mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="acciones">
+        <mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
+        <mat-cell *matCellDef="let aux; let i=index;">
+          <div class="custom-control custom-switch">
+            <input type="checkbox" class="custom-control-input" id="idEstado_{{ aux.idEntidadFinanciera }}"
+              name="estado" [checked]="aux.estado == 1 ? true : false" (change)="updateDeEstado(aux)" />
+            <label class="custom-control-label" for="idEstado_{{ aux.idEntidadFinanciera }}"></label>
+          </div>
+          <button mat-icon-button color="primary" (click)="openElActualizar(aux)">
+            <mat-icon aria-label="Edit">edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="delete(aux)">
+            <mat-icon aria-label="Delete">delete</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let aux; columns: displayedColumns"></mat-row>
+    </mat-table>
+    <mat-paginator [pageSizeOptions]="[6, 8, 10]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>
